clang/test/BSC/Negative/Method/BuiltInType/int_too_few_arguments_call/int_too_few_arguments_call.cbs
// RUN: %clang_cc1 -verify %s

void int::increase(int* this) { // expected-note {{'increase' declared here}}
}

int main() {
    int::increase(); // expected-error {{too few arguments to function call, single argument 'this' was not specified}}
    return 0;
}